# learn-bgfx

./: .gitmodules  CMakeLists.txt  README.md  build-macos.sh  ios.toolchains.cmake
shaders/common/: common.sh
shaders/example_02_trangle/: varying.def.sc  vs_triangle.sc
shaders/example_03_transform/: fs_triangle.sc  varying.def.sc  vs_triangle.sc
src/: common.h  example_01_helloworld.cpp  example_02_triangle.cpp  example_03_transform.cpp  example_04_multiviews.cpp  glfw_utils.h  utils_bgfx.h  utils_glfw.h
tools/macos/: geometryc  shaderc_compile.sh  texturec
